--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="centered-image" src="Fauji-logo-trans.png" alt="Centered Image">
+        <img class="centered-image" src="Fauji-Study-trans.png" alt="Centered Image">
     </div>
 </body>
 </html>
