--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Fauji Study</title>
+    <link rel="icon" href="Fauji-Study-trans.png" type="image/png">
+    <meta name="description" content="Profit Loss Sharing Trade at Gift Card Exchange - Exchange Gift Card for money and other financial options.">
+    <meta name="author" content="Muhammad Moazzam">
+
+    <!-- Redirect -->
     <meta http-equiv="refresh" content="3;url=https://1drv.ms/f/s!ArdzW5s6GpGgqXC9h63yoqoxCD1L?e=3KA8Av">
     <!-- Redirects to http://www.example.com/ after 3 seconds -->
     <style>
