--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Fauji Study</title>
     <link rel="icon" href="Fauji-Study-trans.png" type="image/png">
-    <meta name="description" content="Profit Loss Sharing Trade at Gift Card Exchange - Exchange Gift Card for money and other financial options.">
+    <meta name="description" content="Faui Study">
     <meta name="author" content="Muhammad Moazzam">
 
     <!-- Redirect -->
