--- a/index.html
+++ b/index.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
 
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PPVN7DC8');</script>
-    <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ERN12S1G9M"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-ERN12S1G9M');
+    </script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Fauji Study</title>
     <link rel="icon" href="Fauji-Study-trans.png" type="image/png">
-    <meta name="description" content="Faui Study">
+    <meta name="description" content="Fauji Study">
     <meta name="author" content="Muhammad Moazzam">
 
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="3;url=https://1drv.ms/f/s!ArdzW5s6GpGgqXC9h63yoqoxCD1L?e=3KA8Av">
-    <!-- Redirects to http://www.example.com/ after 3 seconds -->
+    <meta http-equiv="refresh" content="2;url=https://1drv.ms/f/s!ArdzW5s6GpGgqXC9h63yoqoxCD1L?e=3KA8Av">
+    <!-- Redirects to http://www.example.com/ after 2 seconds -->
     <style>
         .container {
             display: flex;
