--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <meta name="author" content="Muhammad Moazzam">
 
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="2;url=https://1drv.ms/f/s!ArdzW5s6GpGgqXC9h63yoqoxCD1L?e=3KA8Av">
-    <!-- Redirects to http://www.example.com/ after 2 seconds -->
+    <meta http-equiv="refresh" content="1;url=https://1drv.ms/f/s!ArdzW5s6GpGgqXC9h63yoqoxCD1L?e=3KA8Av">
+    <!-- Redirects to http://www.example.com/ after 1 second -->
     <style>
         .container {
             display: flex;
